--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="char__pronounce">a</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/src/images/chicken.png" alt="Ayam" />
+                <img class="char__example-img" src="/images/chicken.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
@@ -50,7 +50,7 @@
                 <div class="char__pronounce">bé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/src/images/pillow.png" alt="Bantal" />
+                <img class="char__example-img" src="/images/pillow.png" alt="Bantal" />
                 <p class="char__example-name">Bantal</p>
               </div>
             </article>
@@ -65,7 +65,7 @@
                 <div class="char__pronounce">cé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/src/images/hoe.png" alt="Cangkul" />
+                <img class="char__example-img" src="/images/hoe.png" alt="Cangkul" />
                 <p class="char__example-name">Cangkul</p>
               </div>
             </article>
@@ -80,7 +80,7 @@
                 <div class="char__pronounce">dé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/src/images/leaf.png" alt="Daun" />
+                <img class="char__example-img" src="/images/leaf.png" alt="Daun" />
                 <p class="char__example-name">Daun</p>
               </div>
             </article>
