--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="char__pronounce">a</div>
               </div>
               <div class="char__example">
-                <img src="/images/chicken.png" alt="Ayam" class="char__example-img"  />
+              <img class="char__example-img" src="images/chicken.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
