--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="char__pronounce">a</div>
               </div>
               <div class="char__example">
-             <img class="char__example-img" src=/images/chicken.png" alt="Ayam" />
+             <img class="char__example-img" src=images/chicken.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
@@ -49,7 +49,7 @@
                 <div class="char__pronounce">bé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/images/pillow.png" alt="Bantal" />
+                <img class="char__example-img" src="images/pillow.png" alt="Bantal" />
                 <p class="char__example-name">Bantal</p>
               </div>
             </article>
@@ -64,7 +64,7 @@
                 <div class="char__pronounce">cé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/images/hoe.png" alt="Cangkul" />
+                <img class="char__example-img" src="images/hoe.png" alt="Cangkul" />
                 <p class="char__example-name">Cangkul</p>
               </div>
             </article>
@@ -79,7 +79,7 @@
                 <div class="char__pronounce">dé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="/images/leaf.png" alt="Daun" />
+                <img class="char__example-img" src="images/leaf.png" alt="Daun" />
                 <p class="char__example-name">Daun</p>
               </div>
             </article>
