--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                 <div class="char__pronounce">dé</div>
               </div>
               <div class="char__example">
-                <img class="char__example-img" src="images/leaf.png" alt="Daun" />
+<!--                 <img class="char__example-img" src="images/leaf.png" alt="Daun" /> -->
+                <img class="char__example-img" src="https://tarwinaja.github.io/BelajarAlfabet/images/leaf.png" alt="Daun" />
+
                 <p class="char__example-name">Daun</p>
               </div>
             </article>
