--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="char__pronounce">a</div>
               </div>
               <div class="char__example">
-             <img class="char__example-img" src=images/chicken.png" alt="Ayam" />
+             <img class="char__example-img" src="images/chicken.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
@@ -79,9 +79,7 @@
                 <div class="char__pronounce">dé</div>
               </div>
               <div class="char__example">
-<!--                 <img class="char__example-img" src="images/leaf.png" alt="Daun" /> -->
-                <img class="char__example-img" src="https://tarwinaja.github.io/BelajarAlfabet/images/leaf.png" alt="Daun" />
-
+                <img class="char__example-img" src="images/leaf.png" alt="Daun" />
                 <p class="char__example-name">Daun</p>
               </div>
             </article>
