--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <div class="char__pronounce">a</div>
               </div>
               <div class="char__example">
-             <img class="char__example-img" src="../images/chicken.png" alt="Ayam" />
+<!--              <img class="char__example-img" src="images/chicken.png" alt="Ayam" /> -->
+                <img class="char__example-img" src="images/chicken.png" alt="Ayam" style="width: 100%; max-width: 600px; height: auto;" />
+
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
