--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </div>
               <div class="char__example">
 <!--              <img class="char__example-img" src="images/chicken.png" alt="Ayam" /> -->
-                <img class="char__example-img" src="images/chicken.png" alt="Ayam" style="width: 100%; max-width: 600px; height: auto;" />
+                <img class="char__example-img" src="images/chicken.png" alt="Ayam" style="width: 100;height: 100;" />
 
                 <p class="char__example-name">Ayam</p>
               </div>
