--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <div class="char__pronounce">a</div>
               </div>
               <div class="char__example">
-<!--              <img class="char__example-img" src="images/chicken.png" alt="Ayam" /> -->
-                <img class="char__example-img" src="images/chicken.png" alt="Ayam" style="width: 100;height: 100;" />
+             <img class="char__example-img" src="images/chicken.png" alt="Ayam" />
 
                 <p class="char__example-name">Ayam</p>
               </div>
