--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class="char__name">a</div>
                 <div class="char__pronounce">a</div>
               </div>
+              <div><img src="images/chicken.png"/></div
               <div class="char__example">
                 <img class="char__example-img" src="images/chicken.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
