--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </div>
               <div><img src="images/chicken.png"/></div
               <div class="char__example">
-                <img class="char__example-img" src="images/chicken.png" alt="Ayam" />
+                <img class="char__example-img" src="chicken.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
