--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
                 <div class="char__name">a</div>
                 <div class="char__pronounce">a</div>
               </div>
-              <div><img src="images/chicken.png"/></div
               <div class="char__example">
-                <img class="char__example-img" src="chicken.png" alt="Ayam" />
+                <img class="char__example-img" src="/BelajarAlfabet/images/suit.png" alt="Ayam" />
                 <p class="char__example-name">Ayam</p>
               </div>
             </article>
