--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <footer>
     <div class="wrapper">
       <p class="foot-information">
-        Belajar Fundamental Front-End Web Development | Dicoding Indonesia
+        Belajar Alfabet Dasar
       </p>
     </div>
   </footer>
